migrating the project to ubuntu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.servlet.context-path=/SpringMVC
 spring.mvc.servlet.path=/servlet
  
 # 8081 will be used by Nexus : 
-server.port=8085
+server.port=8082
 
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -23,7 +23,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #logging configuration
-logging.file.name=C:\\logs\\timesheet.log
+logging.file.name=logs/app-log.log
 logging.level.com.zaxxer.hikari=warn
 logging.level.org.springframework=warn 
 logging.level.root=INFO
