--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<java.version>11</java.version>
 		<jacoco.version>0.8.6</jacoco.version>
     	<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
     	<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -101,11 +100,11 @@
 <distributionManagement>
 <snapshotRepository>
       <id>deploymentRepo</id>
-      <url>http://localhost:8081/repository/maven-snapshots/</url>
+      <url>http://192.168.1.6:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
 	<repository>
 	  <id>deploymentRepo</id>
-      <url>http://localhost:8081/repository/maven-releases/</url>
+      <url>http://192.168.1.6:8081/repository/maven-releases/</url>
     </repository>
   </distributionManagement>
 
